# Ignis

./: .gitignore  .gitmodules  ;  CMakeLists.txt  build.bat  compile_flags.txt  run.bat
code/app/: ecs.cpp  fullquad.cpp  game.cpp  graphics_test.cpp  memory.cpp  memoryTest.cpp  physics.cpp  physics_app.cpp  renderer.cpp  soa_test.cpp  sphere.cpp  string_test.cpp  testApp.cpp  triangle.cpp
code/base/: base_arena.cpp  base_arena.h  base_core.h  base_include.cpp  base_include.h  base_logger.cpp  base_logger.h  base_math.cpp  base_math.h  base_memory.cpp  base_memory.h  base_string.cpp  base_string.h
code/draw/: d_include.cpp  d_include.h  draw.cpp  draw.h
code/os/: os_include.cpp  os_include.h  os_memory.h  os_win32_memory.cpp
code/os/gfx/: os_gfx.cpp  os_gfx.h
code/physics/: ph_core.cpp  ph_core.h  physics_2d.cpp  physics_2d.h
code/render/: r_buffer.cpp  r_buffer.h  r_core.cpp  r_core.h  r_include.cpp  r_include.h  r_pipeline.cpp  r_pipeline.h  r_texture.cpp  r_texture.h
code/render/vulkan/: r_init_vk.cpp  r_init_vk.h  r_vk_buffer.cpp  r_vk_buffer.h  r_vk_command_buffer.cpp  r_vk_command_buffer.h  r_vk_core.cpp  r_vk_core.h  r_vk_device.cpp  r_vk_device.h  r_vk_main.cpp  r_vk_main.h  r_vk_pipeline.cpp  r_vk_pipeline.h  (+5 more)
data/shaders/: SDF.frag  SDF.vert  SDFFS.spv  compileGLSL.bat  default2D.frag  default2D.vert  default2DVS.spv  default3D.frag  default3D.vert  default3DFS.spv  default3DFStest.spv  default3DVS.spv  default3DVStest.spv  default3Dtest.frag  defaultFullscreen.frag  defaultFullscreen.vert  defaultFullscreenFS.spv  defaultFullscreenVS.spv  defaultFullscrennFS.spv  fullquad.frag  fullquad.vert  include_test.glsl  line.frag  line.vert  lineVS.spv  noise.frag  noise.vert  noiseFS.spv  pink3D.frag  pink3D.vert  sdf2D.frag  sdf2D.vert  sdf_box_fs.glsl  sdf_vs.glsl  skybox.frag  skybox.vert  skyboxFS.spv  skyboxVS.spv  sprite.frag  sprite.vert  (+4 more)
src/: CMakeLists.txt
src/app/: win_baseApp.cpp  win_baseApp.h
src/ignis/: CMakeLists.txt
src/input/: win_keyboard.cpp  win_mouse.cpp  win_mouse.h
src/ui/: checkBox.cpp  checkBox.h  ui.cpp  ui.h  uiElement.h
src/utils/: CMakeLists.txt
src/vk/: buffer.cpp  buffer.h  commandPool.cpp  commandPool.h  depthBuffer.cpp  device.cpp  device.h  error.cpp  error.h  instance.cpp  instance.h  modelPipeline.h  realTimeShader.cpp  shader.cpp  shader.h  staticMesh.h  swapchain.cpp  texture.cpp  texture.h
(+44 files in other folders)
